test/spec_vectors/data/ok/module_29.wat
(module (memory 1) (data (i32.mul (i32.const 1) (i32.const 2))))