test/spec_vectors/data/fail/module_52.wat
(module (memory 1) (data (ref.null func)))